page level stuff working now.  Might be a couple small bugs, but should be good.  Comments are actually working, though we're not showing them in the read-mode panel yet.

--- a/rb/static/widget/css/widget.css
+++ b/rb/static/widget/css/widget.css
@@ -2093,6 +2093,7 @@ div.rdr div.rdr_body.rdr_tags_list .rdr_box .rdr_count {
     margin: 0;
     */
 }
+div.rdr div.rdr_body.rdr_tags_list .rdr_box .rdr_tag_split .rdr_tag_read_icon,
 div.rdr div.rdr_body.rdr_tags_list .rdr_box .rdr_tag_split .rdr_count {
   margin-top: 1em;
 }
